# examples

./: CMakeLists.txt  Dockerfile  README.md  aliases.sh  crtp.hpp  main.cpp  manager.hpp  mock.hpp  pretty.hpp  ut.cpp
.github/workflows/: cmake-single-platform.yml  rust.yml
cpp/: .clang-format  .run_clang_format.sh.swp  CMakeLists.txt  README.md  run_clang_format.sh
cpp/concepts/: CMakeLists.txt  handler.hpp  main.cpp  manager.hpp  mock.hpp  ut.cpp
cpp/crtp/: CMakeLists.txt  handler.hpp  main.cpp  manager.hpp  mock.hpp  ut.cpp
cpp/helpers/: CMakeLists.txt  log.hpp
cpp/templated/: CMakeLists.txt  handler.hpp  main.cpp  manager.hpp  ut.cpp
cpp/virtual_functions/: CMakeLists.txt  handler.hpp  main.cpp  manager.hpp  mock.hpp  ut.cpp
crtp/: CMakeLists.txt  main.cpp  ut.cpp
rust/trait_interface_static/: Cargo.toml
rust/trait_interface_static/src/: main.rs
templated/: manager.hpp  ut.cpp
trait_interface_static/: Cargo.toml
trait_interface_static/src/: main.rs
virtual_functions/: README.md  crtp.hpp  main.cpp  manager.hpp  ut.cpp
